<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imgDetailPoster"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDetailBackdrop" />

    <ImageView
        android:id="@+id/imgDetailBackdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgDetailPoster"
        app:layout_constraintTop_toBottomOf="@id/imgDetailBackdrop" />

    <TextView
        android:id="@+id/tvMovieReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgDetailPoster"
        app:layout_constraintTop_toBottomOf="@id/tvDetailTitle" />

    <TextView
        android:id="@+id/tvDetailReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/tvMovieReleaseDate"
        app:layout_constraintTop_toBottomOf="@id/tvDetailTitle" />

    <TextView
        android:id="@+id/tvMovieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgDetailPoster"
        app:layout_constraintTop_toBottomOf="@id/tvMovieReleaseDate" />

    <TextView
        android:id="@+id/tvDetailRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/tvMovieReleaseDate"
        app:layout_constraintTop_toBottomOf="@id/tvDetailReleaseDate" />

    <TextView
        android:id="@+id/tvDetailRatingViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/voting"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tvDetailRating"
        app:layout_constraintTop_toBottomOf="@id/tvDetailReleaseDate" />

    <TextView
        android:id="@+id/tvMovieViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewer"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/imgDetailPoster"
        app:layout_constraintTop_toBottomOf="@id/tvMovieRating" />

    <TextView
        android:id="@+id/tvDetailViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewer"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/tvMovieReleaseDate"
        app:layout_constraintTop_toBottomOf="@id/tvDetailRating" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/description"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDetailPoster" />

</androidx.constraintlayout.widget.ConstraintLayout>